// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextAreaField rendering adds the error class if the error is set 1`] = `
<FieldWrapper
  className="TextAreaField"
  counter={null}
  error="Error"
  helperId="random-id-helper"
  helperText="Helper text"
  htmlFor="random-id"
  label="Label"
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={true}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize TextAreaField--error"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextAreaField rendering does not add the resize class if the resize is true 1`] = `
<FieldWrapper
  className="TextAreaField"
  counter={null}
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="textarea"
    className="TextAreaField__area"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextAreaField rendering renders expected elements 1`] = `
<FieldWrapper
  className="TextAreaField"
  counter={null}
  helperId="random-id-helper"
  helperText="Helper text"
  htmlFor="random-id"
  label="Label"
  required={true}
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    aria-required={true}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextAreaField rendering renders expected elements when className is set 1`] = `
<FieldWrapper
  className="TextAreaField TestClass"
  counter={null}
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextAreaField rendering renders expected elements when showCounter is true 1`] = `
<FieldWrapper
  className="TextAreaField"
  counter="5/10"
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextAreaField rendering renders expected elements when value is empty 1`] = `
<FieldWrapper
  className="TextAreaField"
  counter={null}
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value=""
  />
</FieldWrapper>
`;
